force-app/main/default/objects/Lilly_Custom_Attribute__c/Lilly_Custom_Attribute__c.object-meta.xml
<CustomObject>
    <label>Custom Attribute</label>
    <nameField>
        <label>Custom Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>