force-app/main/default/objects/Lilly_Custom_Attribute__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Attributes</relationshipLabel>
    <relationshipName>Custom_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>