force-app/main/default/objects/Lilly_Custom_Attribute__c/fields/Lilly_Custom_Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Custom_Attribute_Name__c</fullName>
    <label>Custom Attribute Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>