force-app/main/default/objects/Lilly_Custom_Attribute__c/fields/Lilly_HCP_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Id__c</fullName>
    <label>HCP Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>