force-app/main/default/objects/Lilly_Custom_Attribute__c/fields/Lilly_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>