force-app/main/default/objects/Lilly_Custom_Attribute__c/fields/Lilly_UniqueIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_UniqueIntegrationId__c</fullName>
    <externalId>true</externalId>
    <label>Unique Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>